--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ markdown:            kramdown
 highlighter:         rouge
 permalink:           /:title
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
+theme:               jekyll-theme-minimal
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:		           "Tomorrow's Blog"
