--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ highlighter:         rouge
 permalink:           /:title
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 theme:                jekyll-theme-minimal
+sass:
+  style: compressed  # 可选，设置 Sass 输出的 CSS 格式
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:		           "Tomorrow's Blog"
