--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ paginate:            5
 # Build settings
 markdown:            kramdown
 highlighter:         rouge
-permalink:           /:title
+permalink:           /:categories/:year/:month/:day/:title/
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 theme:                jekyll-theme-minimal
 
