Your commit message

--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,13 @@ permalink:           /:categories/:year/:month/:day/:title/
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 theme:                jekyll-theme-minimal
 
+
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:		           "Tomorrow's Blog"
 email:               "zjmzjm606@gmail.com   zjmzjm66@connect.hku.hk"
 url:                 "https://zjmzjm606.github.io"
-baseurl:             "/zjmzjm606.github.io"
+baseurl: ""  
+
 
 social_links:
   twitter: "https://twitter.com/your_username"
